fix: header styles on mobile screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,8 @@
     --background: #101827;
     --foreground: #ffffff;
 
-    --navbar-height: 60px;
+    --navbar-height: 77px;
+    
     --sidebar-expanded-width: 256px;
     --sidebar-collapsed-width: 56px;
     --embedded-expanded-player-left: 272px;
